# lox

./: Cargo.toml  rustfmt.toml
src/: ast.rs  ctx.rs  lexer.rs  main.rs  parser.rs  sem.rs  support.rs  token.rs
src/lir/: gen.rs  inst.rs  mod.rs
src/vm/: builtins.rs  heap.rs  interpreter.rs  jit.rs  mod.rs  operations.rs  string_table.rs  value.rs
src/vm/jit/: mem.rs  mod.rs  regalloc.rs
src/vm/jit/emitter/: cond.rs  imm.rs  mod.rs  reg.rs
tests/: testsuite.rs
tests/lox/: add.lox  arith.lox  bool.lox  compare.lox  equality.lox  interp-dispatch.lox  print.lox  string.lox  vars.lox  while.lox
