[package]
name = "lox"
version = "0.1.0"
authors = ["Aakash Patel <aakpat6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
failure = "0.1.6"
codespan = "0.8.0"
codespan-reporting = "0.8.0"

string_cache = "0.8.0"

libc = "0.2.2"
byteorder = "1.3.4"

capstone = "0.6.0"

[dev-dependencies]
lit = "0.4.0"
